--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Job Analysis</h1>
+    <input type="file" id="file_selector" accept=".json">
+    
     
 </body>
 </html>
