--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    input{
+        border-radius: 2px;
+    }
+</style>
 <body>
     <h1>Job Analysis</h1>
     <input type="file" id="file_selector" accept=".json">
-    
+
     
 </body>
 </html>
