--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
     input{
         border-radius: 5px;
     }
+    body{
+        background-color: rgb(223, 223, 223);
+    }
+    div{
+        background-color: white;
+        margin: 10px;
+    }
 </style>
 <body>
-    <h1>Job Analysis</h1>
-    <input type="file" id="file_selector" accept=".json">
-
-    
+    <div>
+        <h1>Job Analysis</h1>
+        <input type="file" id="file_selector" accept=".json">
+    </div>
 </body>
 </html>
