--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     }
     div{
         background-color: white;
-        margin: 10px;
+        margin: 6px;
+        border-radius: 5px;
+        padding: 8px;
     }
 </style>
 <body>
