--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <div>
         <h1>Job Analysis</h1>
         <input type="file" id="file_selector" accept=".json">
+        <label for="level">Filter by Level: </label>
+        <select name="" id="level">
+            <option value="entry">Entry level</option>
+            <option value="expert">Expert</option>
+        </select>
     </div>
 </body>
 </html>
