--- a/index.html
+++ b/index.html
@@ -23,8 +23,24 @@
     <div>
         <h1>Job Analysis</h1>
         <input type="file" id="file_selector" accept=".json">
+        <br>
         <label for="level">Filter by Level: </label>
         <select name="" id="level">
+            <option value="all">All</option>
+            <option value="entry">Entry level</option>
+            <option value="expert">Expert</option>
+        </select>
+
+        <label for="level">Filter by Level: </label>
+        <select name="" id="level">
+            <option value="all">All</option>
+            <option value="entry">Entry level</option>
+            <option value="expert">Expert</option>
+        </select>
+
+        <label for="level">Filter by Level: </label>
+        <select name="" id="level">
+            <option value="all">All</option>
             <option value="entry">Entry level</option>
             <option value="expert">Expert</option>
         </select>
