--- a/index.html
+++ b/index.html
@@ -31,18 +31,16 @@
             <option value="expert">Expert</option>
         </select>
 
-        <label for="level">Filter by Level: </label>
-        <select name="" id="level">
+        <label for="type">Filter by Type: </label>
+        <select name="" id="type">
             <option value="all">All</option>
-            <option value="entry">Entry level</option>
-            <option value="expert">Expert</option>
+            <option value="one-time">One-time project</option>
         </select>
 
-        <label for="level">Filter by Level: </label>
-        <select name="" id="level">
+        <label for="skill">Filter by Skill: </label>
+        <select name="" id="skill">
             <option value="all">All</option>
-            <option value="entry">Entry level</option>
-            <option value="expert">Expert</option>
+            <option value="web">Web Application Job</option>
         </select>
     </div>
 </body>
