--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <option value="web">Web Application Job</option>
         </select>
 
-        <button id="filterBtn">
-            &nbsp;Filter Jobs
+        &nbsp;<button id="filterBtn">
+            Filter Jobs
         </button>
         <br>
         <br>
@@ -53,6 +53,10 @@
             <option value="title">Title (A-Z)</option>
             <option value="first">Posted Time (Newest First)</option>
         </select>
+
+        &nbsp;<button id="sortBtn">
+            Sort Jobs
+        </button>
     </div>
 </body>
 </html>
