--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     }
 </style>
 <body>
+    <script src="JobAnalysis.js"></script>
     <div>
         <h1>Job Analysis</h1>
         <input type="file" id="file_selector" accept=".json">
