--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             Sort Jobs
         </button>
 
-        <p id="display"></p>
+        <label id="display"></label>
     </div>
 
 </body>
